style(card): correct comp reproduce .card to .card-blue

--- a/pages/research/computational_reproducibility.qmd
+++ b/pages/research/computational_reproducibility.qmd
@@ -23,7 +23,7 @@ listing:
       - "../publications/2025/heather2025reproducibility/index.qmd"
 ---
 
-::: {.card}
+::: {.card-blue}
 
 **Take-home message:**
 
