--- a/pages/research/stars_framework_reuse.qmd
+++ b/pages/research/stars_framework_reuse.qmd
@@ -1,5 +1,14 @@
 ---
 title: "STARS framework for model reuse"
+listing:
+  - id: pub
+    contents:
+      - "../publications/2024/monks2024towards/index.qmd"
 ---
 
 Page yet to be written!
+
+## Publication
+
+::: {#pub}
+:::
